--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
-    "build": "rm -rf ./public/assets && ./node_modules/webpack/bin/webpack.js --config ./webpack.js"
+    "build": "rm -rf ./public/assets && ./node_modules/webpack/bin/webpack.js --config ./webpack.js",
+    "debug": "rm -rf ./public/assets && node --inspect-brk ./node_modules/webpack/bin/webpack.js --config ./webpack.js"
   },
   "dependencies": {
     "expose-loader": "0.7.4",
