--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "expose-loader": "0.7.4",
     "jquery": "2.2.0",
-    "webpack": "3.8.1"
+    "webpack": "3.8.1",
+    "webpack-md5-hash": "^0.0.6"
   }
 }
